fixed cockpit-button disappearing on small devices

--- a/src/app/user-control-panel/components/one-column-layout/one-column-layout.scss
+++ b/src/app/user-control-panel/components/one-column-layout/one-column-layout.scss
@@ -147,10 +147,10 @@
           padding-top: 0;
         }
       }
-    }
 
-    .main-btn {
-      display: none;
+      .main-btn {
+        margin-top: 0;
+      }
     }
   }
 }
